# hardware-foundry

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/_base/: pyproject.toml
agents/_base/foundry_agent_base/: __init__.py  agent.py  state.py
agents/clarifier/: pyproject.toml
agents/clarifier/foundry_agent_clarifier/: __init__.py  agent.py  prompts.py
agents/clarifier/tests/: test_clarifier.py
agents/compliance/: pyproject.toml
agents/compliance/foundry_agent_compliance/: __init__.py  agent.py  prompts.py
agents/component_selection/: pyproject.toml
agents/component_selection/foundry_agent_component_selection/: __init__.py  agent.py  prompts.py  suppliers.py
agents/component_selection/tests/: test_component_selection.py
agents/feasibility/: pyproject.toml
agents/feasibility/foundry_agent_feasibility/: __init__.py  agent.py  prompts.py
agents/feasibility/tests/: test_feasibility.py
agents/planner/: pyproject.toml
agents/planner/foundry_agent_planner/: __init__.py  agent.py  prompts.py
agents/planner/tests/: test_planner.py
agents/reference_search/: pyproject.toml
agents/reference_search/foundry_agent_reference_search/: __init__.py  agent.py  prompts.py
agents/reference_search/tests/: test_reference_search.py
apps/api/: pyproject.toml
apps/api/foundry_api/: __init__.py  cloud.py  config.py  db.py  echo_agent.py  main.py  workflow.py
apps/api/foundry_api/projects/: __init__.py  models.py  repository.py  router.py
apps/api/tests/: test_cloud_config.py  test_cloud_storage.py  test_migration_0002_metadata.py  test_projects_cloud_e2e.py  test_state.py  test_workflow_topology.py
apps/web/: .env.example  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/projects/[id]/: page.tsx
apps/web/lib/: api.ts  types.ts
infra/: docker-compose.yml
infra/litellm/: config.yaml
infra/postgres-init/: 01-extensions.sql
migrations/: alembic.ini  env.py
migrations/versions/: 0001_init_projects.py  0002_components_pgvector.py
scripts/: cloud_health.py
