[project]
name = "foundry-agent-base"
version = "0.0.1"
description = "Shared base classes and state schemas for all Hardware Foundry agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "litellm>=1.50",
    "langfuse>=3.0",
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry_agent_base"]
