[project]
name = "foundry-agent-clarifier"
version = "0.0.1"
description = "Clarifier agent — asks targeted disambiguation questions before planning"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "foundry-agent-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry_agent_clarifier"]
