[project]
name = "foundry-agent-compliance"
version = "0.0.1"
description = "Compliance agent — selects applicable regulations per market for a ProductSpec"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "foundry-agent-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry_agent_compliance"]
