[project]
name = "foundry-agent-component-selection"
version = "0.0.1"
description = "Component Selection agent — Phase 3 foundation: supplier adapter protocol + stub"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "foundry-agent-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry_agent_component_selection"]
