[project]
name = "foundry-agent-feasibility"
version = "0.0.1"
description = "Feasibility agent — rough cost/time/complexity/risk estimates for a ProductSpec"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "foundry-agent-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry_agent_feasibility"]
