[project]
name = "foundry-agent-planner"
version = "0.0.1"
description = "Planner agent — converts clarified inputs into a frozen ProductSpec"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "foundry-agent-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry_agent_planner"]
