[project]
name = "foundry-api"
version = "0.0.1"
description = "FastAPI service exposing the Hardware Foundry agent graph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.27",
    "structlog>=24.4",
    "foundry-agent-base",
    "foundry-agent-clarifier",
    "foundry-agent-compliance",
    "foundry-agent-component-selection",
    "foundry-agent-feasibility",
    "foundry-agent-planner",
    "foundry-agent-reference-search",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry_api"]
